--- a/public/index.html
+++ b/public/index.html
@@ -3,81 +3,9 @@
 <title>Coco React App</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="manifest" href="../public/manifest.json">
+<link rel="manifest" href="./manifest.json">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-  html {
-    background: url("cityscape-sunset.jpg") no-repeat center fixed;
-    background-size: cover;
-  }
-
-  .image-tile {
-    background: url("laptop-code.jpg") center;
-    background-size: auto;
-  }
-</style>
 <body>
-
-<!-- Navbar -->
-<div class="w3-top">
-  <div class="w3-bar w3-black w3-card">
-    <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">HOME</a>
-    <a href="#portfolio" class="w3-bar-item w3-button w3-padding-large w3-hide-small">PORTFOLIO</a>
-    <a href="#about" class="w3-bar-item w3-button w3-padding-large w3-hide-small">ABOUT</a>
-    <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</a>
-    <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right"><i class="fa fa-search"></i></a>
-  </div>
-</div>
-
-<!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
-<div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
-  <a href="#portfolio" class="w3-bar-item w3-button w3-padding-large">PORTFOLIO</a>
-  <a href="#about" class="w3-bar-item w3-button w3-padding-large">ABOUT</a>
-  <a href="#contact" class="w3-bar-item w3-button w3-padding-large">CONTACT</a>
-</div>
-
-<!-- Page Content -->
-<div class="w3-content" style="max-width:2000px;margin-top:46px;">
-
-  <!-- The Coco Web App Introduction Section -->
-  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="home">
-    <h2 class="w3-wide w3-text-white">WELCOME TO COCO WEB APPLICATION</h2>
-    <p class="w3-opacity w3-text-white"><i>This is my first react app</i></p>
-    <p class="w3-justify w3-text-white">We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-      ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur
-      adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-  </div>
-
-  <!-- The Projects Section -->
-  <div class="image-tile" id="projects">
-    <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
-      <h2 class="w3-wide w3-center">PROJECTS</h2>
-      <p class="w3-opacity w3-center"><i>Working towards greatness</i></p><br>
-    </div>
-  </div>
-
-  <!-- The About Section -->
-  <div class="w3-black" id="about">
-    <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
-      <h2 class="w3-wide w3-center">ABOUT ME</h2>
-      <p class="w3-opacity w3-center"><i>Working towards greatness</i></p><br>
-    </div>
-  </div>
-  
-<!-- End Page Content -->
-</div>
-
-<!-- Footer -->
-<footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
-  <i class="fa fa-facebook-official w3-hover-opacity"></i>
-  <i class="fa fa-instagram w3-hover-opacity"></i>
-  <i class="fa fa-snapchat w3-hover-opacity"></i>
-  <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-  <i class="fa fa-twitter w3-hover-opacity"></i>
-  <i class="fa fa-linkedin w3-hover-opacity"></i>
-  <p class="w3-medium">Socials</p>
-</footer>
+  <div id="root"></div>
 </body>
 </html>
